# piped

./: Cargo.toml  sprite_maps.txt  sprites.txt  terrain.txt
shaders/: ptile.fs.glsl  ptile.gs.glsl  ptile.vs.glsl
src/: draw.rs  emu.rs  main.rs  rom.rs  ui.rs
